changed to small letters

--- a/sales.html
+++ b/sales.html
@@ -9,16 +9,16 @@
       <ul id = "seattle" ></ul>
 
       <h2>Tokyo</h2>
-      <ul id = "Tokyo" ></ul>
+      <ul id = "tokyo" ></ul>
 
       <h2>Dubai</h2>
-      <ul id = "Dubai" ></ul>
+      <ul id = "dubai" ></ul>
 
       <h2>Paris</h2>
-      <ul id = "Paris" ></ul>
+      <ul id = "paris" ></ul>
 
       <h2>Lima</h2>
-      <ul id = "Lima" ></ul>
+      <ul id = "lima" ></ul>
 
     <script src = "./app.js"></script>
   </body>
