class 07 lab (constructor function and table)

--- a/sales.html
+++ b/sales.html
@@ -5,21 +5,8 @@
   </head>
   <body>
     <h1>Salmon Cookies Sales Data</h1>
-      <h2>Seattle</h2>
-      <ul id = "seattle" ></ul>
-
-      <h2>Tokyo</h2>
-      <ul id = "tokyo" ></ul>
-
-      <h2>Dubai</h2>
-      <ul id = "dubai" ></ul>
-
-      <h2>Paris</h2>
-      <ul id = "paris" ></ul>
-
-      <h2>Lima</h2>
-      <ul id = "lima" ></ul>
-
+    <h2>Cookies sold per hour</h2>
+    <table id="locationSales"></table>
     <script src = "./app.js"></script>
   </body>
 </html>
