added styles to home page

--- a/index.html
+++ b/index.html
@@ -6,12 +6,32 @@
     <title>Salmon Cookies</title>
   </head>
   <body>
-    <header>
-      <h1>Salmon Cookies Lab Class06</h1>
-    </header>
+    <h1>Salmon Cookies Lab</h1>
+    <h2>Salmon Cookie Locations</h2>
+    <ol>
+      <li>Seattle</li>
+      <li>Tokyo</li>
+      <li>Dubai</li>
+      <li>Paris</li>
+      <li>Lima</li>
+    </ol>  
+    <a href="./sales.html">Sales Data</a>
     <main>
-      <img src="./salmon.png" alt="salmon.png">
-      <a href="./sales.html">Sales Data</a>
+      <img src="./salmon.png" alt="salmon">
+      <img src="./chinook.jpg" alt="chinook">
+      <img src="./cutter.jpeg" alt="cutter">
+      <img src="./family.jpg" alt="family">
+      <img src="./fish.jpg" alt="fish">
+      <img src="./frosted-cookie.jpg" alt="frosted">
+      <img src="./shirt.jpg" alt="shirt">
     </main>
+    <footer>
+      <h3>Store opening Hours For All Locations</h3>
+        <ul>
+            <li>6 a.m. - 8 p.m.</li>
+            <li>cookies@salmoncookies.com</li>
+        </ul>
+        &copy;Salmon Cookies 2021
+      </footer>
   </body>
 </html>
