--- a/sales.html
+++ b/sales.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Sales Data</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <a href="./index.html">Home Page</a>
+      </nav>
+    </header>
     <h1>Salmon Cookies Sales Data</h1>
     <h2>Cookies sold per hour</h2>
     <table id="locationSales"></table>
