Google Fonts Added As per Instructor Comments

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <link rel = "stylesheet" href = "./reset.css">
     <link rel = "stylesheet" href = "./style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+    <style>
+      h1 {
+        font-family: "Sofia", sans-serif;
+      }
+    </style>
     <title>Salmon Cookies</title>
   </head>
   <body>
